cache added dbcontext edited dtos edited cqrs and mediatr added

--- a/src/Infrastructure/ShoppingList.Persistence/ShoppingList.Persistence.csproj
+++ b/src/Infrastructure/ShoppingList.Persistence/ShoppingList.Persistence.csproj
@@ -17,16 +17,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\ShoppingList.Core.Application\ShoppingList.Application.csproj" />
     <ProjectReference Include="..\..\Core\ShoppingList.Core.Domain\ShoppingList.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Handlers\Command\" />
-    <Folder Include="Handlers\Query\" />
+    <ProjectReference Include="..\ShoppingList.Infrastructure\ShoppingList.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
