--- a/src/Presentation/ShoppingList.WebAPI/appsettings.json
+++ b/src/Presentation/ShoppingList.WebAPI/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Audience": "",
+    "Issuer": "",
+    "Key": "hgfasjdhgfgiusdfgjhgmncv"
+  },
 }
